--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/morgan": "^1.9.4",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "ts-node": "^10.9.1"
   }
 }
